--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "BASE_API_URL", '"https://api.edmunds.com/api/vehicle/v2/"'
+        buildConfigField "String", "API_KEY", APIKey
     }
     buildTypes {
         release {
