--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.texocoyotl.ptedmundscars">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".DashBoardActivity"
+            android:name=".activities.dashboard.DashBoardActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,15 +23,23 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login"></activity>
 
-        </activity>
         <provider
             android:name=".data.CarsContentProvider"
             android:authorities="com.texocoyotl.ptedmundscars"
             android:enabled="true"
             android:exported="false" />
 
+        <activity
+            android:name=".activities.detail.DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:parentActivityName=".activities.dashboard.DashBoardActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.texocoyotl.ptedmundscars.activities.dashboard.DashBoardActivity" />
+        </activity>
     </application>
 
 </manifest>
