--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         versionName "1.0"
 
         buildConfigField "String", "BASE_API_URL", '"https://api.edmunds.com/api/vehicle/v2/"'
+        buildConfigField "String", "BASE_IMAGES_API_URL", '"https://api.edmunds.com/v1/api/vehiclephoto/service/"'
+        buildConfigField "String", "BASE_IMAGES_URL", '"http://media.ed.edmunds-media.com/"'
         buildConfigField "String", "API_KEY", APIKey
     }
     buildTypes {
