--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
         buildConfigField "String", "BASE_API_URL", '"https://api.edmunds.com/api/vehicle/v2/"'
         buildConfigField "String", "BASE_IMAGES_API_URL", '"https://api.edmunds.com/v1/api/vehiclephoto/service/"'
-        buildConfigField "String", "BASE_IMAGES_URL", '"http://media.ed.edmunds-media.com/"'
+        buildConfigField "String", "BASE_IMAGES_URL", '"http://media.ed.edmunds-media.com"'
         buildConfigField "String", "API_KEY", APIKey
     }
     buildTypes {
@@ -37,4 +37,6 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
