--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.dashboard.DashBoardActivity"
+            android:name=".views.activities.dashboard.DashBoardActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".activities.login.LoginActivity">
+            android:name=".views.activities.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,22 +33,22 @@
             android:exported="false" />
 
         <activity
-            android:name=".activities.detail.DetailActivity"
+            android:name=".views.activities.detail.DetailActivity"
             android:label="@string/title_activity_detail"
-            android:parentActivityName=".activities.dashboard.DashBoardActivity"
+            android:parentActivityName=".views.activities.dashboard.DashBoardActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.texocoyotl.ptedmundscars.activities.dashboard.DashBoardActivity" />
+                android:value=".views.activities.dashboard.DashBoardActivity" />
         </activity>
         <activity
-            android:name=".activities.gallery.GalleryActivity"
+            android:name=".views.activities.gallery.GalleryActivity"
             android:label="@string/title_activity_gallery"
-            android:parentActivityName=".activities.detail.DetailActivity"
+            android:parentActivityName=".views.activities.detail.DetailActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.texocoyotl.ptedmundscars.activities.detail.DetailActivity" />
+                android:value=".views.activities.detail.DetailActivity" />
         </activity>
     </application>
 
